add alts to photos

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Documentation</h2>
-    <img src="img/docu.jpg" class="rounded mx-auto d-block community-photo" alt="documention project"/>
+    <img src="img/docu.jpg" class="rounded mx-auto d-block community-photo" alt="documentation project"/>
     <p class="card-text research-text">Ayapaneco is a critically endangered language spoken by approximately 8 elders in southern Mexico, but current community-based efforts seek to reverse language loss. In 2020, we undertook the challenge of supporting these efforts through a collaborative and cross-disciplinary framework by producing the first open access documentary corpus of Ayapaneco. This is an ongoing community-driven documentation project supported by FONCA.</p>
   </div>
 </div>
