--- a/fieldwork.html
+++ b/fieldwork.html
@@ -42,17 +42,17 @@
 <!-- END NAV -->
 
 
-<!-- START FIELDWORK PROJECTS-->
+<!-- START FIELDWORK-->
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Fieldwork</h2>
-    <img src="img/fieldwork2.Jpg" class="rounded mx-auto d-block community-photo" alt="photo group"/>
+    <img src="img/fieldwork2.Jpg" class="rounded mx-auto d-block community-photo" alt="southern Mexico"/>
     <p class="card-text research-text">I’m a seasoned field worker with 10 years of experience in Maya and Mixe-Zoque language communities of southern Mexico. I've worked in small and medium-sized rural communities with varying degrees of multilingualism. Since 2012, I’ve been a permanent visitor to Ayapa and surrounding communities in Jalpa de Méndez, Tabasco.</p>
   </div>
 </div>
 
-<!-- END FIELDWORK PROJECTS-->
+<!-- END FIELDWORK-->
 
 
 <!-- START CONTACT SECTION -->
