--- a/software.html
+++ b/software.html
@@ -146,7 +146,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="https://whispaw.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5"  src="img/whispaw.jpg" alt="" /></a>
+                                  <a href="https://whispaw.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5"  src="img/whispaw.jpg" alt="whispaw" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Whispaw is a social media web application that allows users to connect & match with each other. It's the Tinder of pets! Technolgies: Ruby, Rails, PostGreSQL. APIs: AS3, SendGrid & Mapbox </p>
                                 <a class="btn btn-danger btn-lg" href="https://whispaw.herokuapp.com/" role="button" target="_blank">View here</a>
@@ -177,7 +177,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="https://arcane-basin-51216.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5" src="img/marketplace.jpg" alt="" /></a>>
+                                  <a href="https://arcane-basin-51216.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5" src="img/marketplace.jpg" alt="chatons lovers store" /></a>>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Chatons Lovers is a marketplace to get the cutest cat photos on Internet! Technolgies: Ruby, Rails, PostGreSQL. APIs: AS3 & SendGrid</p>
                                   <a class="btn btn-danger btn-lg" href="https://arcane-basin-51216.herokuapp.com/" role="button" target="_blank">View here</a>
@@ -208,7 +208,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="https://jhon-ran.github.io/yiadore/" target="_blank"><img class="img-fluid rounded mb-5" src="img/yiadore.jpg" alt="" /></a>
+                                  <a href="https://jhon-ran.github.io/yiadore/" target="_blank"><img class="img-fluid rounded mb-5" src="img/yiadore.jpg" alt="yi'adore store" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Landing page for a fair trade fashion brand located in Mexico. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://jhon-ran.github.io/yiadore/" role="button" target="_blank">View here</a>
@@ -239,7 +239,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="http://www.divertiplay.tk" target="_blank"><img class="img-fluid rounded mb-5" src="img/divertiplay.jpg" alt="" /></a>
+                                  <a href="http://www.divertiplay.tk" target="_blank"><img class="img-fluid rounded mb-5" src="img/divertiplay.jpg" alt="divertiplay" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Product page for a local company in Mexico dedicated to renting bounce houses & party supplies. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="http://www.divertiplay.tk/" role="button" target="_blank">View here</a>
@@ -270,7 +270,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="https://jhon-ran.github.io/MySurfingProject/" target="_blank"><img class="img-fluid rounded mb-5" src="img/surfing.jpg" alt="" /></a>
+                                  <a href="https://jhon-ran.github.io/MySurfingProject/" target="_blank"><img class="img-fluid rounded mb-5" src="img/surfing.jpg" alt="surfing project" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Product page for a proof of concept. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://jhon-ran.github.io/MySurfingProject/" role="button" target="_blank">View here</a>
@@ -301,7 +301,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <a href="https://codepen.io/jo_ran/full/eYdGGbb" target="_blank"><img class="img-fluid rounded mb-5" src="img/survey.jpg" alt="" /></a>
+                                  <a href="https://codepen.io/jo_ran/full/eYdGGbb" target="_blank"><img class="img-fluid rounded mb-5" src="img/survey.jpg" alt="survey form" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Proof of concept for a survey. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://codepen.io/jo_ran/full/eYdGGbb" role="button" target="_blank">View here</a>
