--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
   </div>
 </section>
 
-<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
+<div class="card text-white mb-3 mt-3 mx-auto contact" style="max-width: 85rem;">
   <div class="card-body m-4">
     <div class="typeform-widget" data-url="https://form.typeform.com/to/iRW7U1Ug?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 700px;"></div> 
   </div>
