add a nowrap to whitespace for single words

--- a/community.html
+++ b/community.html
@@ -54,7 +54,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center community-text text-danger mb-5">Documentation</h2>
+    <h2 class="card-title text-center text-nowrap text-danger mb-5">Documentation</h2>
     <img src="img/docu.jpg" class="rounded mx-auto d-block community-photo" alt="documentation project"/>
     <p class="card-text research-text">Ayapaneco is a critically endangered language spoken by approximately 8 elders in southern Mexico, but current community-based efforts seek to reverse language loss. In 2020, we undertook the challenge of supporting these efforts through a collaborative and cross-disciplinary framework by producing the first open access documentary corpus of Ayapaneco. This is an ongoing community-driven documentation project supported by FONCA.</p>
   </div>
@@ -70,7 +70,7 @@
 
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
-    <h2 class="card-title text-center text-danger mb-5">Revitalization</h2>
+    <h2 class="card-title text-center text-danger text-nowrap mb-5">Revitalization</h2>
     <img src="img/revitalization.jpg" class="rounded mx-auto d-block community-photo" alt="language class"/>
     <p class="card-text research-text">I’m an expert and active participant in community-based revitalization efforts for critically endangered languages. My role goes beyond linguistic “expertise” and I get involved in many other aspects of community life based on their requests and needs. I believe that as linguists, we have a larger commitment to society and to the communities we interact with.</p>
   </div>
