--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<!-- Icon Divider-->
 
 					<!-- Masthead Subheading-->
-					<p class="masthead-subheading font-weight-light mb-0 text-danger">Linguist - Scicomm'er - Developer</p>
+					<p class="masthead-subheading mt-3 font-weight-light mb-0 text-danger">Linguist - Scicomm'er - Developer</p>
 					<div class="divider-custom divider-light">
 						<div class="divider-custom-line"></div>
 						<div class="divider-custom-icon"><i class="fas fa-star"></i></div>
