add media query for titles research

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="card  text-center mx-auto mb-5" style="max-width: 75rem">
   <div class="card-body">
-    <h5 class="card-title">Thanks for stopping by! I'm a postdoctoral linguist, science communicator and developer in the making. Keep scrolling to check out what I am up to.</h5>
+    <h5 class="card-title">Thanks for stopping by! I'm a postdoctoral linguist, science communicator and developer in the making. Keep scrolling to check out what I've been up to.</h5>
     <!--<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>-->
     <a href="about.html" class="btn btn-danger">More about me</a>
   </div>
