--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,13 @@
 
 <!-- START CONTACT SECTION -->
 
-<section id="contact" class="contact-section mt-4">
+<section  class="contact-section mt-4">
   <div class="contact-section-header">
     <h2 class="text-danger">Let's Chat!</h2>
   </div>
 </section>
 
-<div class="card text-white mb-3 mt-3 mx-auto contact" style="max-width: 85rem;">
+<div class="card text-white mb-3 mt-3 mx-auto contact" style="max-width: 85rem;" id="contact-form">
   <div class="card-body m-4">
     <div class="typeform-widget" data-url="https://form.typeform.com/to/iRW7U1Ug?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 700px;"></div> 
   </div>
