--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <footer class="footer bottom">
   <div class="d-flex flex-column justify-content-center">
     <div class="mx-auto mb-1">
-      <a href='https://bachelorthesiswritingservice.com/'>https://bachelorthesiswritingservice.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8451b0168e94ad00097a3c8272ed40b6f1f3193d'></script>
+      <!--<a href='https://bachelorthesiswritingservice.com/'>https://bachelorthesiswritingservice.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8451b0168e94ad00097a3c8272ed40b6f1f3193d'></script>-->
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/782469/t/2"></script>
     </div>
     <p>
