--- a/presentations.html
+++ b/presentations.html
@@ -78,7 +78,10 @@
 
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
-		<h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
+    <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Words like the wind: Documenting variation in critically endangered languages". BU Linguistics Colloquia, Spring 2021, Boston University. March 19. <a href="https://youtu.be/yJxnu6VROFo" target="_blank"> [Video available] </a> <a href="https://jhon-ran.github.io/BU/" target="_blank"> [Slides available]</a/p>
+    <p class="card-text reference-indent">Cortez Lemus, H., Martínez Pérez, M. A., Velasco, P., Rangel, J., Vargas, A. K. 2021. Conversatorio "Proyectos multilingüisticos de lenguas originarias en México". Día internacional de la lengua materna. Instituto Universitario de Estudios sobre América Latina (IEAL), Universidad de Sevilla. February 26. <a href="https://youtu.be/yx6Ko0bRtk4" target="_blank"> [Video available]</a></p>
+    <p class="card-text reference-indent">Galán López, F., Osorio May, J. C., Escobar Potenciano, A., Rangel, J. 2021. Conversatorio "Lenguas e historia en Tabasco, caminos trazados por la interculturalidad". Día internacional de la lengua materna. Instituto Universitario de Estudios sobre América Latina (IEAL), Universidad de Sevilla. February 22.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Documenting variation in a critically endangered language". SOAS Intro to Language Documentation course, December 2. <a href="https://www.academia.edu/44626126/Documenting_variation_in_a_critically_endangered_language" target="_blank"> [Available here]</a></p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Perspectivas y retos de la investigación-colaboración en el contexto de lenguas en
       alto riesgo de desaparición". Semillero "Dinámicas lingüísticas y socioculturales en Cartagena", Universidad de Cartagena, October 30. <a href="https://www.academia.edu/44406655/Perspectivas_y_retos_de_la_investigaci%C3%B3n_colaboraci%C3%B3n_en_el_contexto_de_lenguas_en_alto_riesgo_de_desaparici%C3%B3n" target="_blank"> [Available here]</a></p>
