--- a/presentations.html
+++ b/presentations.html
@@ -67,7 +67,7 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger reference-title mb-5">Conference Proceedings</h2>
-    <p class="card-text reference-indent">Rangel, Jhonnatan. In preparation. "Writing the future of Ayapaneco: an orthography for heritage and new speakers of a critically endangered language". <cite>Language Documentation and Description</cite>. Proceedings of the FEL24: Teaching and Learning Resources for Endangered Languages.</p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. In press. "Writing the future of Ayapaneco: an orthography for heritage and new speakers of a critically endangered language". <cite>Language Documentation and Description</cite>. Proceedings of the FEL24: Teaching and Learning Resources for Endangered Languages.</p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Challenges for language technologies in critically endangered languages". Proceedings of the International Conference LT4All, December 4-6, UNESCO, Paris. <a href="https://lt4all.elra.info/media/papers/O10/118.html" target="_blank"> [Available here]</a></p>
 	</div>
 </div>
@@ -79,6 +79,7 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Los límites de lo normativo en la revitalización de lenguas en alto riesgo de desaparición". II Seminario de sociolingüística: de la norma, el estándar y lo normativo, Alicante, España. May 12. <a href="https://youtu.be/pirYYKS6mtM" target="_blank"> [Video available] </a> <a href="https://hal.archives-ouvertes.fr/hal-03227144" target="_blank"> [Slides available]</a/p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Words like the wind: Documenting variation in critically endangered languages". BU Linguistics Colloquia, Spring 2021, Boston University. March 19. <a href="https://youtu.be/yJxnu6VROFo" target="_blank"> [Video available] </a> <a href="https://jhon-ran.github.io/BU/" target="_blank"> [Slides available]</a/p>
     <p class="card-text reference-indent">Cortez Lemus, H., Martínez Pérez, M. A., Velasco, P., Rangel, J., Vargas, A. K. 2021. Conversatorio "Proyectos multilingüisticos de lenguas originarias en México". Día internacional de la lengua materna. Instituto Universitario de Estudios sobre América Latina (IEAL), Universidad de Sevilla. February 26. <a href="https://youtu.be/yx6Ko0bRtk4" target="_blank"> [Video available]</a></p>
     <p class="card-text reference-indent">Galán López, F., Osorio May, J. C., Escobar Potenciano, A., Rangel, J. 2021. Conversatorio "Lenguas e historia en Tabasco, caminos trazados por la interculturalidad". Día internacional de la lengua materna, Universidad Intercultural del Estado de Tabasco. February 22.</p>
