--- a/presentations.html
+++ b/presentations.html
@@ -117,7 +117,8 @@
 
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
-		<h2 class="card-title text-center text-danger my-0 reference-title mb-5">Conference Organization</h2>
+    <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Conference Organization</h2>
+    <p class="card-text reference-indent"> Adélaide Calais, Claire Camberlein, Johanna Cordova, Hugo Lopez, Damien Nouvel, Lucas Prégaldiny, Fatiha Sadat, Anass Sedrati, Emma Vadillo Quesada, Jhonnatan Rangel (Co-organizers). 2021. "ContribuLing". INALCO-Wikimedia-BULAC-Université du Québec, Paris, June 3-4. <a href="https://meta.wikimedia.org/wiki/ContribuLing" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent"> Veronique Acking, Houssamoudine Ankili, Suat Istanbullu, Gilles Martinet, Aïda Ramirez Romero, Jhonnatan Rangel (Co-organizers). 2018. "La voix des «acteurs de terrain» en contexte asymétrique: quels enjeux de positionnement, légitimité et représentativité pour un.e jeune chercheur·ses?". Colloque des Doctorants de la Fédération Sciences Sociales Suds (CODOFE), Université Paris-Diderot, Paris, November 22-23. <a href="https://www.academia.edu/37449579/De_la_voix_des_enqu%C3%AAt%C3%A9s_%C3%A0_la_voix_du_chercheur_Les_processus_de_construction_de_l%C3%A9gitimit%C3%A9_du_jeune_chercheur" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent"> Rangel, Jhonnatan. 2017. Round table organizer: "Perspectivas indígenas en el México contemporáneo: discursos, imaginarios y prácticas". VI Simposio Becarios CONACyT en Europa, European Parliament, Strasbourg, France, March 29-31. <a href="https://www.academia.edu/32294415/Perspectivas_ind%C3%ADgenas_en_el_M%C3%A9xico_contempor%C3%A1neo_discursos_imaginarios_y_pr%C3%A1cticas" target="_blank"> [Available here]</a></p>
 	</div>
