add twitter bot to portafolio

--- a/software.html
+++ b/software.html
@@ -55,7 +55,18 @@
 				</div>
 				<!-- Portfolio Grid Items-->
 				<div class="row justify-content-center">
-						<!-- Portfolio Item 1-->
+
+          	<!-- Portfolio Item 1-->
+						<div class="col-md-6 col-lg-4">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div>
+                  <img class="img-fluid" src="img/ayapaneco.png" alt="Twitter bot" />
+              </div>
+          </div>
+
+						<!-- Portfolio Item 2-->
 						<div class="col-md-6 col-lg-4 mb-5">
 								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -64,7 +75,7 @@
 										<img class="img-fluid" src="img/whispaw.jpg" alt="whispaw" />
 								</div>
 						</div>
-						<!-- Portfolio Item 2-->
+						<!-- Portfolio Item 3-->
 						<div class="col-md-6 col-lg-4 mb-5">
 								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -73,7 +84,7 @@
 										<img class="img-fluid" src="img/marketplace.jpg" alt="chatons lovers store" />
 								</div>
 						</div>
-						<!-- Portfolio Item 3-->
+						<!-- Portfolio Item 4-->
 						<div class="col-md-6 col-lg-4 mb-5">
 								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -82,7 +93,7 @@
 										<img class="img-fluid" src="img/yiadore.jpg" alt="yi'adore store" />
 								</div>
 						</div>
-						<!-- Portfolio Item 4-->
+						<!-- Portfolio Item 5-->
 						<div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
 								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -91,22 +102,13 @@
 										<img class="img-fluid" src="img/divertiplay.jpg" alt="divertiplay" />
 								</div>
 						</div>
-						<!-- Portfolio Item 5-->
+						<!-- Portfolio Item 6-->
 						<div class="col-md-6 col-lg-4 mb-5 mb-md-0">
 								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
 										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
 												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
 										</div>
 										<img class="img-fluid" src="img/surfing.jpg" alt="surfing project" />
-								</div>
-						</div>
-						<!-- Portfolio Item 6-->
-						<div class="col-md-6 col-lg-4">
-								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-										</div>
-										<img class="img-fluid" src="img/survey.jpg" alt="survey form" />
 								</div>
 						</div>
 				</div>
@@ -125,8 +127,38 @@
 
 <!-- START PORTFOLIO MINI-->
 
-<!-- Portfolio Modals-->
-        <!-- Portfolio Modal 1-->
+<!-- Portfolio Modal 1-->
+<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true"><i class="fas fa-times"></i></span>
+          </button>
+          <div class="modal-body text-center">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-lg-8">
+                          <!-- Portfolio Modal - Title-->
+                          <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal6Label">Twitter bot</h2>
+                          <!-- Icon Divider-->
+                          <div class="divider-custom">
+                              <div class="divider-custom-line"></div>
+                              <div class="divider-custom-icon"><i class="fas fa-star main-color"></i></div>
+                              <div class="divider-custom-line"></div>
+                          </div>
+                          <!-- Portfolio Modal - Image-->
+                          <a href="https://twitter.com/ayapaneco" target="_blank"><img class="img-fluid rounded mb-5" src="img/ayapaneco.png" alt="Twitter bot" /></a>
+                          <!-- Portfolio Modal - Text-->
+                          <p class="mb-5">Twitter bot for language revitalization. Technologies: Ruby & Twitter API.</p>
+                          <a class="btn btn-danger btn-lg" href="https://twitter.com/ayapaneco" role="button" target="_blank">View here</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+        <!-- Portfolio Modal 2-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
@@ -157,7 +189,7 @@
               </div>
           </div>
       </div>
-      <!-- Portfolio Modal 2-->
+      <!-- Portfolio Modal 3-->
       <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="portfolioModal2Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
@@ -188,7 +220,7 @@
               </div>
           </div>
       </div>
-      <!-- Portfolio Modal 3-->
+      <!-- Portfolio Modal 4-->
       <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
@@ -219,7 +251,7 @@
               </div>
           </div>
       </div>
-      <!-- Portfolio Modal 4-->
+      <!-- Portfolio Modal 5-->
       <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
@@ -250,7 +282,7 @@
               </div>
           </div>
       </div>
-      <!-- Portfolio Modal 5-->
+      <!-- Portfolio Modal 6-->
       <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
@@ -282,36 +314,7 @@
           </div>
       </div>
       <!-- Portfolio Modal 6-->
-      <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
-          <div class="modal-dialog modal-xl" role="document">
-              <div class="modal-content">
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                  </button>
-                  <div class="modal-body text-center">
-                      <div class="container">
-                          <div class="row justify-content-center">
-                              <div class="col-lg-8">
-                                  <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal6Label">Survey Form</h2>
-                                  <!-- Icon Divider-->
-                                  <div class="divider-custom">
-                                      <div class="divider-custom-line"></div>
-                                      <div class="divider-custom-icon"><i class="fas fa-star main-color"></i></div>
-                                      <div class="divider-custom-line"></div>
-                                  </div>
-                                  <!-- Portfolio Modal - Image-->
-                                  <a href="https://codepen.io/jo_ran/full/eYdGGbb" target="_blank"><img class="img-fluid rounded mb-5" src="img/survey.jpg" alt="survey form" /></a>
-                                  <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Proof of concept for a survey. Technologies: HML, CSS & Bootstrap.</p>
-                                  <a class="btn btn-danger btn-lg" href="https://codepen.io/jo_ran/full/eYdGGbb" role="button" target="_blank">View here</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+
 
 <!-- END PORTFOLIO MINI-->
 
