--- a/communication.html
+++ b/communication.html
@@ -86,6 +86,7 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Talks</h2>
+    <p class="card-text reference-indent">2021. Moderator: Rangel, J. Paricipants: Aguilar Martínez, V.,  Montaño Ramírez, T., Esperanza Hernández Vázquez, M.Webinar: "@actLenguas: Twitter y el activismo digital colaborativo de lenguas indígenas". Feria de las Lenguas Indígenas Nacionales 2021, September 21. <a href="https://youtu.be/P2WHtUEW3BE" target="_blank"> [Video available]</a></p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Participation au concours ma thèse en 180 secondes". Université de Paris. March 17. <a href="https://youtu.be/RyQX8wwzTIk" target="_blank"> [Video available]</a></p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Hacia el Decenio de las Lenguas Indígenas: una mirada a la diversidad lingüística en México”. USBI Coatzacoalcos, Universidad Veracruzava. February 23. <a href="https://youtu.be/Kk7yoPgdxMg" target="_blank"> [Video available]</a> <a href="https://bit.ly/3sW4BFn" target="_blank"> [Slides available]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. Conversatorio “Las artes verbales en la FLIN: Las lenguas en muy alto riesgo de desaparición a través de sus promotores”. Feria de las Lenguas Indígenas Nacionales 2020, INALI. August 11. <a href="https://www.youtube.com/watch?v=E_xNcnKuCMY" target="_blank"> [Available here]</a></p>
