--- a/communication.html
+++ b/communication.html
@@ -76,6 +76,7 @@
 <div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
   <div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger mb-5">Podcasts</h2>
+    <p class="card-text reference-indent">Vázquez Ahued, P., Hernández, M., Rangel, J. "México es indígena. Lenguas, derechos y resistencia". Podcast Palabras en Movimiento, T3 E4, September 30, 2021. <a href="https://open.spotify.com/episode/6DlUIsCf6lgY0eTUEYaKEi" target="_blank"> [Available here]</a></p>
     <p class="card-text reference-indent">Nuckols-Wilde, Catherine. Interview with Jhonnatan Rangel. "Documenting Ayapaneco with Linguist Jhonnatan Rangel". Podcast Mesoamerican Studies On-Air, November 20, 2019. <a href="https://www.buzzsprout.com/563113/2124732" target="_blank"> [Available here]</a></p>
   </div>
 </div>
