add presentation York

--- a/presentations.html
+++ b/presentations.html
@@ -79,6 +79,8 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Language, Communication, and Cultural Expressions".
+      International Indigenous Peer to Peer Virtual Exchange Program, York University. October 27.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Voces que no se van. Acciones para revitalizar la lengua".
       Escuela de Humanidades y Educación Región CDMX, Tecnológico de Monterrey. September 29. <a href="https://youtu.be/q7Sn5WhV9lI" target="_blank"> [Video available] </a/p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Los límites de lo normativo en la revitalización de lenguas en alto riesgo de desaparición". II Seminario de sociolingüística: de la norma, el estándar y lo normativo, Alicante, España. May 12. <a href="https://youtu.be/pirYYKS6mtM" target="_blank"> [Video available] </a> <a href="https://hal.archives-ouvertes.fr/hal-03227144" target="_blank"> [Slides available]</a/p>
