--- a/presentations.html
+++ b/presentations.html
@@ -79,6 +79,8 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Una Década de Perspectivas en el Zoque Ayapaneco". Panel: Anthropology About First Nations at Southeastern of Mexico. Paths Traced by Interculturality, IUAES 2021, Yucatan. November 9.</p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Quand le « hasard » intervient dans la documentation et la description linguistique : les racines positionnelles en zoque ayapaneco". Viva l'ethnolinguistique, Université de Montréal, November 3.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Language, Communication, and Cultural Expressions".
       International Indigenous Peer to Peer Virtual Exchange Program, York University. October 27.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Voces que no se van. Acciones para revitalizar la lengua".
@@ -91,7 +93,7 @@
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Perspectivas y retos de la investigación-colaboración en el contexto de lenguas en
       alto riesgo de desaparición". Semillero "Dinámicas lingüísticas y socioculturales en Cartagena", Universidad de Cartagena, October 30. <a href="https://www.academia.edu/44406655/Perspectivas_y_retos_de_la_investigaci%C3%B3n_colaboraci%C3%B3n_en_el_contexto_de_lenguas_en_alto_riesgo_de_desaparici%C3%B3n" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Writing for the future of Ayapaneco: An orthography for heritage and new speakers of a critically endangered language". Foundation for Endangered Languages Annual Conference: FEL24, September 25. <a href="https://hal.archives-ouvertes.fr/hal-02950079" target="_blank"> [Available here]</a></p>
-		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Variations linguistiques dans les langues en danger (LED)". Viva l'ethnolinguistique, Université de Québec, May 25.</p>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Variations linguistiques dans les langues en danger (LED)". Viva l'ethnolinguistique, Université de Montréal, May 25.</p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. Moderator, Expert Panel: "Threatened languages and language policies with aregional focus". International Congress of Languages at Risk. Los Pinos Cultural Complex, México, February 25-26. <a href="https://www.pscp.tv/w/1lDxLgEEVdoJm?t=1h20m20s" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Diversidad lingüística y lenguas en peligro". Celebración del Día Internacional de la Lengua Materna. Universidad Interculural del Estado de Tabasco, México, February 21. <a href="https://hal.archives-ouvertes.fr/hal-02488830" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. Poster: "Challenges for language technologies in Ayapaneco". International Conference LT4All. UNESCO, Paris, December 4-6. <a href="https://lt4all.elra.info/media/papers/P3/10.html" target="_blank"> [Available here]</a></p>
