add sciencespo talk

--- a/presentations.html
+++ b/presentations.html
@@ -79,7 +79,8 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
-    <p class="card-text reference-indent">Grzech, K., Harvey, A., Thaut, M., Lovestrand, J., Rangel J. 2021. Panel discussion: " The role of descriptive work in language documentation". SOAS Intro to Language Documentation course, November 16.</p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2022. "Language diversity, policies & discrimination in Mexico". SciencesPo Paris, Campus Reims. April 15.<a href="https://www.academia.edu/79617614/Language_diversity_policies_and_discrimination_in_Mexico" target="_blank"> [Slides available]</a</p>
+    <p class="card-text reference-indent">Grzech, K., Harvey, A., Thaut, M., Lovestrand, J., Rangel J. 2021. Panel discussion: "The role of descriptive work in language documentation". SOAS Intro to Language Documentation course, November 16.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Una Década de Perspectivas en el Zoque Ayapaneco". Panel: Anthropology About First Nations at Southeastern of Mexico. Paths Traced by Interculturality, IUAES 2021, Yucatan. November 9.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Quand le « hasard » intervient dans la documentation et la description linguistique : les racines positionnelles en zoque ayapaneco". Viva l'ethnolinguistique, Université de Montréal, November 3.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Language, Communication, and Cultural Expressions".
