--- a/presentations.html
+++ b/presentations.html
@@ -80,9 +80,17 @@
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Presentations</h2>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2022. "Language diversity, policies & discrimination in Mexico". SciencesPo Paris, Campus Reims. April 15.<a href="https://www.academia.edu/79617614/Language_diversity_policies_and_discrimination_in_Mexico" target="_blank"> [Slides available]</a/p>
+
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2022. "Building tech capacity for Ayapaneco, a minorized and critically endangered language in Mexico". Multi-platform and Connecting Communities: Contemporary Challenges for Minority Language Media. Panel 3: Grounded connectivity:
+      Exploring digital capacity building with Indigenous and minoritized communities. Europa Universität Flensburg, Germany, March 31. <a href="" target="_blank"> [Soon available]</a></p>
+
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2022. "El ayapaneco, estudios e iniciativas para su revitalización". Celebración del Día Internacional de la Lengua Materna. Universidad Intercultural del Estado de Tabasco. February 24. <a href="https://www.facebook.com/UIETab/videos/506260930930928" target="_blank"> [Video available] </a></p>
+
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2022. "Zoque ayapaneco: una lengua en alto riesgo de desaparición". Celebración del Día Internacional de la Lengua Materna. Yolitia - Centro de Lenguas Indoamericanas. February 20. <a href="https://www.facebook.com/101554085523393/videos/694909561509541" target="_blank"> [Video available] </a></p>
+
     <p class="card-text reference-indent">Grzech, K., Harvey, A., Thaut, M., Lovestrand, J., Rangel J. 2021. Panel discussion: "The role of descriptive work in language documentation". SOAS Intro to Language Documentation course, November 16.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Una Década de Perspectivas en el Zoque Ayapaneco". Panel: Anthropology About First Nations at Southeastern of Mexico. Paths Traced by Interculturality, IUAES 2021, Yucatan. November 9.</p>
-    <p class="card-text reference-indent">Rangel, Jhonnatan. 2020. "Quand le « hasard » intervient dans la documentation et la description linguistique : les racines positionnelles en zoque ayapaneco". Viva l'ethnolinguistique, Université de Montréal, November 3.</p>
+    <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Quand le « hasard » intervient dans la documentation et la description linguistique : les racines positionnelles en zoque ayapaneco". Viva l'ethnolinguistique, Université de Montréal, November 3.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Language, Communication, and Cultural Expressions".
       International Indigenous Peer to Peer Virtual Exchange Program, York University. October 27.</p>
     <p class="card-text reference-indent">Rangel, Jhonnatan. 2021. "Voces que no se van. Acciones para revitalizar la lengua".
@@ -126,6 +134,7 @@
 <div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
 	<div class="card-body mb-3 mx-4">
     <h2 class="card-title text-center text-danger my-0 reference-title mb-5">Conference Organization</h2>
+    <p class="card-text reference-indent"> Adélaide Calais, Claire Camberlein, Johanna Cordova, Hugo Lopez, Damien Nouvel, Lucas Prégaldiny, Fatiha Sadat, Anass Sedrati, Emma Vadillo Quesada, Jhonnatan Rangel (Co-organizers). 2022. "ContribuLing". INALCO-Wikimedia-BULAC-Université du Québec, Paris, April 22. <a href="https://meta.wikimedia.org/wiki/ContribuLing_2022" target="_blank"> [Available here]</a></p>
     <p class="card-text reference-indent"> Adélaide Calais, Claire Camberlein, Johanna Cordova, Hugo Lopez, Damien Nouvel, Lucas Prégaldiny, Fatiha Sadat, Anass Sedrati, Emma Vadillo Quesada, Jhonnatan Rangel (Co-organizers). 2021. "ContribuLing". INALCO-Wikimedia-BULAC-Université du Québec, Paris, June 3-4. <a href="https://meta.wikimedia.org/wiki/ContribuLing" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent"> Veronique Acking, Houssamoudine Ankili, Suat Istanbullu, Gilles Martinet, Aïda Ramirez Romero, Jhonnatan Rangel (Co-organizers). 2018. "La voix des «acteurs de terrain» en contexte asymétrique: quels enjeux de positionnement, légitimité et représentativité pour un.e jeune chercheur·ses?". Colloque des Doctorants de la Fédération Sciences Sociales Suds (CODOFE), Université Paris-Diderot, Paris, November 22-23. <a href="https://www.academia.edu/37449579/De_la_voix_des_enqu%C3%AAt%C3%A9s_%C3%A0_la_voix_du_chercheur_Les_processus_de_construction_de_l%C3%A9gitimit%C3%A9_du_jeune_chercheur" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent"> Rangel, Jhonnatan. 2017. Round table organizer: "Perspectivas indígenas en el México contemporáneo: discursos, imaginarios y prácticas". VI Simposio Becarios CONACyT en Europa, European Parliament, Strasbourg, France, March 29-31. <a href="https://www.academia.edu/32294415/Perspectivas_ind%C3%ADgenas_en_el_M%C3%A9xico_contempor%C3%A1neo_discursos_imaginarios_y_pr%C3%A1cticas" target="_blank"> [Available here]</a></p>
