add Mastodon link to footer

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/782469/t/2"></script>
     </div>
     <p>
-      &copy; <span id="copyright-year">2021</span> Jhonnatan Rangel 
+      &copy; <span id="copyright-year">2021</span> Jhonnatan Rangel  <a rel="me" href="https://mstdn.social/@joran">Mastodon</a>
     </p>
 </div>
 </footer>
